--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/index.min.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/index.min.js"></script>
-    <title>Anhh Tus Shop</title>
+    <title>FPT Shop</title>
   </head>
   <body>
     <div id="root"></div>
